Accessibility fixes to color contrast

--- a/src/assets/scss/base/_root.scss
+++ b/src/assets/scss/base/_root.scss
@@ -22,7 +22,7 @@
     --black:            #{lib.$neutral-05};
     --off-black:        #{lib.$neutral-10};
     --gray-dark:        #{lib.$neutral-30};
-    --gray-mid:         #{lib.$neutral-50};
+    --gray-mid:         #{lib.$neutral-40};
     --gray-light:       #{lib.$neutral-90};
     --off-white:        #{lib.$neutral-95};
     --white:            #{lib.$neutral-100};
@@ -117,7 +117,7 @@
         --black:        #{lib.$neutral-100};
         --off-black:    #{lib.$neutral-95};
         --gray-dark:    #{lib.$neutral-90};
-        --gray-mid:     #{lib.$neutral-50};
+        --gray-mid:     #{lib.$neutral-60};
         --gray-light:   #{lib.$neutral-30};
         --off-white:    #{lib.$neutral-05};
         --white:        #{lib.$neutral-0};
